fixed img squish 100%

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -40,6 +40,7 @@ img {
 	margin: 0;
 	padding: 0;
 }
+
 html{
 	font-size: 62.5%;
 }
@@ -57,6 +58,10 @@ body {
 .flex{
 	display: flex;
 	flex-wrap: wrap;
+}
+
+.block{
+	display: block;
 }
 
 .full {
@@ -279,7 +284,6 @@ h3{
 }
 
 .worksPair{
-	// background: $grey;
 	padding: 1rem 2rem;
 	width: 100%;
 	align-items: center;
@@ -292,6 +296,7 @@ h3{
 	padding: 2rem;
 	align-items: center;
 	border-right: 1px solid $beige;
+	display: block;
 }
 
 .worksText{
